[package]
name = "business-ideas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
redis = { version = "0.27.2", features = ["aio", "tokio-comp"] }
sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
rand = "0.8.5"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
headers = "0.4.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
